[package]
name = "srtla"
version = "0.1.0"
edition = "2021"
authors = ["Yannis Matezki"]

[[bin]]
name = "srtla_rec"
path = "src/bin/srtla_rec.rs"

[dependencies]
anyhow = "1.0.71"
binary-layout = "3.1.3"
clap = { version = "4.3.5", features = ["cargo"] }
env_logger = "0.10.0"
log = "0.4.19"
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["full"] }
url = "2.4.0"
